--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -40,8 +40,8 @@ input {
   background-color: #edeff0 ;
   padding: 10px 15px;
   border: 3px solid #d7dbdf;
-  border-right: none;
-  border-radius: 0.35em 0 0 0.35em;
+  /*border-right: none;*/
+  border-radius: 0.35em;
   outline: none;
 }
 
