--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,7 +1,16 @@
-.body {
-  text-align: center;
-  font-family: 'Open Sans', sans-serif;
-  color: #3f4850;
+body {
+  margin: 0;
+  padding: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
 }
 
 h2 {
@@ -19,6 +28,23 @@ a {
   text-decoration: none;
 }
 
+input {
+  font-size: 1em;
+  width: 100%;
+  background-color: #edeff0 ;
+  padding: 10px 15px;
+  border: 3px solid #d7dbdf;
+  /*border-right: none;*/
+  border-radius: 0.35em;
+  outline: none;
+}
+
+.body {
+  text-align: center;
+  font-family: 'Open Sans', sans-serif;
+  color: #3f4850;
+}
+
 .search-form {
   max-width: 460px;
   display: flex;
@@ -32,17 +58,6 @@ a {
   padding: 0px 15px;
   border-radius: 0 0.35em 0.35em 0;
   cursor: pointer;
-}
-
-input {
-  font-size: 1em;
-  width: 100%;
-  background-color: #edeff0 ;
-  padding: 10px 15px;
-  border: 3px solid #d7dbdf;
-  /*border-right: none;*/
-  border-radius: 0.35em;
-  outline: none;
 }
 
 .main-nav li {
